--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -161,6 +161,46 @@ spec:
 
 ---
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: message
+  labels:
+    app: message
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: message
+  template:
+    metadata:
+      labels:
+        app: message
+    spec:
+      containers:
+        - name: message
+          image: 879772956301.dkr.ecr.ap-southeast-1.amazonaws.com/message:latest
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
+
+
+---
 
 apiVersion: v1
 kind: Service
@@ -225,3 +265,20 @@ spec:
       targetPort: 8080
   selector:
     app: orderstatus
+
+
+---
+
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: message
+  labels:
+    app: message
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    app: message
